[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysb-units"
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = []
authors = [
  {name = "Blake A. Wilson", email = "blakeawilson.phd@gmail.com"},
]
description = "Collection of pharmacodynamic response models."
readme = "README.md"
keywords = ['response model', 'dose-response', 'receptor-response']
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Pharma-Modelers",
  "Topic :: Pharmalogical Modeling :: Exposure-Response",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/Borealis-BioModeling/pharmacodynamic-response-models"
Issues = "https://github.com/Borealis-BioModeling/pharmacodynamic-response-models/issues"
Changelog = "https://github.com/Borealis-BioModeling/pharmacodynamic-response-models/CHANGELOG.md"

# Find namespace package
[tool.setuptools.packages.find]
where = ["./"]
include = ["pharmacodynamic",
           ]
namespaces = true

# Set the dynamic version
[tool.setuptools.dynamic]
version = {attr = "pharmacodynamic.__version__"}